--- a/package.json
+++ b/package.json
@@ -25,7 +25,43 @@
     "pretest": "rimraf coverage"
   },
   "keywords": [],
-  "author": "",
+  "author": "dev-warner",
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main",
+      {
+        "name": "beta",
+        "prerelease": true
+      }
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged && npm run lint && npm run test && npm run build"
+    }
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "lint-staged": {
+    "{lib,test}/**/*.ts": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
@@ -35,6 +71,7 @@
     "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "git-cz": "^4.7.6",
+    "husky": "^6.0.0",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.48.0",
